2005-09-11  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* util.hh (copy_str): New function similar to strdup().
	* format/format.hh (~format_repr): delete memory pointed to by PLAN.
	* format/format.cc (format_repr::format_repr): Use a duplicate string
	for PLAN, not the original string.

2005-07-14  Tom Tromey  <tromey@redhat.com>

	* model/class.cc (apply_type_map): Moved body ...
	(create_instance): ... here.

2005-07-11  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (find_field): Examine erasure of field's
	type.
	(find_method): Examine erasures of method's types.

2005-07-11  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (visit_cast): Fixed ordering of emit_cast
	arguments.

2005-07-11  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (visit_cast): Handle Character specially.

2005-07-11  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (find_method): Don't crash if argtype is
	NULL and method is not found.

2005-07-11  Tom Tromey  <tromey@redhat.com>

	* model/throwsclause.cc (get_signature): Return empty string if
	no parameterized types seen.
	* bytecode/classreader.cc (parse_signature): Handle case where
	exceptions are elided.  Clear current_method_arguments before
	parsing method signature.
	(parse_self): Require ACC_SUPER for enums.
	* bytecode/signature.cc (parse_ref_type): Exit loop if inner class
	is parameterized.

2005-07-09  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (visit_field_ref): Correctly call
	handle_invocation.

2005-07-09  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.hh (bytecode_generator::handle_invocation):
	Updated.
	* bytecode/generate.cc (handle_invocation): Added 'use_accessor'
	argument.
	(visit_method_invocation): Updated.
	(visit_type_qualified_invocation): Likewise.
	(visit_super_invocation): Likewise.
	(visit_field_ref): Likewise.
	(dereference_left_hand_side): Updated for static accessors.
	(emit_lhs_store): Likewise.
	(visit_field_ref): Likewise.